Patch fix sidebar so that it works on mobile for blog.

--- a/src/components/Blog/styles/BlogResults.module.css
+++ b/src/components/Blog/styles/BlogResults.module.css
@@ -47,3 +47,11 @@
     margin-top: 4em;
     margin-bottom: 6em;
 }
+
+
+@media (max-width: 750px) {
+    .container {
+        width: 100%;
+        padding-left:0;
+    }   
+}
